--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ h2{
 }
 table{
     border: 1px solid black;
-    width: 100%;
     text-align: center;
     font-size: 20px;
     border-collapse: collapse;
@@ -61,7 +60,7 @@ td, th{
     border: 1px solid black;
     border-collapse: collapse;
     text-align: center;
-    padding-left: 20px;
+    padding: 10px;
 }
 
 .Kontakt{
@@ -69,6 +68,42 @@ td, th{
 }
 #nav{
     margin: 70px;
+}
+#ponovo{
+    width: 100px;
+    height: 40px;
+    margin: 30px;
+    font-size: 15px;
+    background-color: rgb(250, 159, 201);
+    border: none;
+}
+#pot{
+    width: 100px;
+    height: 40px;
+    margin: 30px;
+    font-size: 15px;
+    background-color: rgb(250, 159, 201);
+    border: none;
+}
+textarea{
+    width: 250px;
+    height: 150px;
+}
+select{
+    width: 100px;
+    height: 25px;
+    background-color: rgb(249, 190, 218);
+    border: none;
+}
+.cjenik{
+    text-align: center;
+    padding-top: 150px;
+}
+.cjenik, p{
+    font-size: x-large;
+}
+.cjenik, h2{
+    padding-top: 60px;
 }
 .flex-item-right {
   padding: 10px;
